# ray-tracer

./: .gitignore  CMakeLists.txt  run.sh
doc/: 1000?cb=20210722013238
include/: light.h  material.h  sphere.h
lib/: librayvector.h
src/: main  main.c  sphere.c
